--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,3 @@
-</div>
 <!-- <div class="footer"> -->
     <footer id="footer">
   <img class="footer-img" src="images/footer-background.png" alt="footer-img">
@@ -8,13 +7,13 @@
         <p style="line-height:1;"></p>
         <p class="footer-copyright-text">AssistU &copy;2019
           <a herf="https://github.com/chingu-voyages/v10-geckos-team-14">
-          ChinguV10-#14 🇮🇳🤝🇺🇸
+          ChinguV10 Team#14 🇮🇳 🤝 🇺🇸
           </a>
         </p>
       </div>
       <div class="col f1" >
           <p style="line-height:1;"></p>
-        <p class="footer-copyright-text text-center" style="font-display: inline-block">Made with ❤️, Lots of ☕️ & Chingu </p><br/>
+        <p class="footer-copyright-text text-center" style="font-display: inline-block">Made with ❤️, lots of ☕️ & Chingu</p><br/>
       </div>
       <div class="col social-icons">
         <a href="#">
