--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -258,11 +258,15 @@ section.works-sec {
 	display: flex;
 	align-self: flex-start;
 }
-.login-sec-title {
+/* .login-sec-title {
 	left: 4;
+} */
+.label-for-login{
+	font-family: 'Fredoka One', cursive;
+	font-size: 1.1rem;
 }
 .login-box {
-	background-color: #63152f80;
+	background-color: #e1e3f0;
 	width: 50%;
 	height: 27rem;
 	border-radius: 2rem
@@ -320,7 +324,7 @@ section.works-sec {
 	margin-top: 13% !important;
 	padding-bottom: 8%;
 }
-/* register page */
+/*! Register page */
 .register-head{
 	position: absolute;
 	top: 6%;
