--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,8 +10,8 @@
 	<div>
 		<img
 			src="/images/helpingHands.png"
-			width="150"
-			height="150"
+			width="100"
+			height="100"
 			class="logo-img reg-logo"
 			alt="logo-assistU"
 		/>
@@ -41,7 +41,7 @@
 		<label class="label-for-register">Email</label>
 		<div class="input-group mb-2">
 			<div class="input-group-prepend">
-				<span class="input-group-text icon-container" id="basic-addon1"
+				<span class="input-group-text icon-container" id="basic-addon2"
 					><i class="fa fa-envelope" aria-hidden="true"></i
 				></span>
 			</div>
@@ -56,14 +56,13 @@
 		<label class="label-for-register">Password</label>
 		<div class="input-group mb-2">
 			<div class="input-group-prepend">
-				<span class="input-group-text icon-container" id="basic-addon1"
+				<span class="input-group-text icon-container" id="basic-addon3"
 					><i class="fa fa-key" aria-hidden="true"></i
 				></span>
 			</div>
 			<input
 				type="password"
 				class="form-control reg-form"
-				name="clientPassword"
 				name="clientPassword"
 				placeholder="Your Password"
 				aria-describedby="basic-addon1"
@@ -72,14 +71,13 @@
 		<label class="label-for-register">Mobile Number</label>
 		<div class="input-group mb-2">
 			<div class="input-group-prepend">
-				<span class="input-group-text icon-container" id="basic-addon1"
+				<span class="input-group-text icon-container" id="basic-addon4"
 					><i class="fa fa-mobile" aria-hidden="true"></i
 				></span>
 			</div>
 			<input
 				type="number"
 				class="form-control reg-form"
-				name="clientMobileNo"
 				name="clientMobileNo"
 				placeholder="Your Mobile Number"
 				aria-describedby="basic-addon1"
@@ -89,7 +87,7 @@
 		<div class="row">
 			<div class="col-lg-6 input-group mb-2">
 				<div class="input-group-prepend">
-					<span class="input-group-text icon-container" id="basic-addon1"
+					<span class="input-group-text icon-container" id="basic-addon5"
 						><i class="fa fa-home" aria-hidden="true"></i
 					></span>
 				</div>
@@ -103,7 +101,7 @@
 			</div>
 			<div class="col-lg-6 input-group mb-2">
 				<div class="input-group-prepend">
-					<span class="input-group-text icon-container" id="basic-addon1"
+					<span class="input-group-text icon-container" id="basic-addon6"
 						><i class="fa fa-home" aria-hidden="true"></i
 					></span>
 				</div>
@@ -119,7 +117,7 @@
 		<div class="row">
 			<div class="col-lg-6 input-group mb-2">
 				<div class="input-group-prepend">
-					<span class="input-group-text icon-container" id="basic-addon1"
+					<span class="input-group-text icon-container" id="basic-addon7"
 						><i class="fa fa-home" aria-hidden="true"></i
 					></span>
 				</div>
@@ -133,7 +131,7 @@
 			</div>
 			<div class="col-lg-6 input-group mb-2">
 				<div class="input-group-prepend">
-					<span class="input-group-text icon-container" id="basic-addon1"
+					<span class="input-group-text icon-container" id="basic-addon8"
 						><i class="fa fa-home" aria-hidden="true"></i
 					></span>
 				</div>
@@ -149,7 +147,7 @@
 		<div class="row">
 			<div class="col-lg-6 input-group mb-2">
 				<div class="input-group-prepend">
-					<span class="input-group-text icon-container" id="basic-addon1"
+					<span class="input-group-text icon-container" id="basic-addon9"
 						><i class="fa fa-home" aria-hidden="true"></i
 					></span>
 				</div>
@@ -163,7 +161,7 @@
 			</div>
 			<div class="col-lg-6 input-group mb-2">
 				<div class="input-group-prepend">
-					<span class="input-group-text icon-container" id="basic-addon1"
+					<span class="input-group-text icon-container" id="basic-addon10"
 						><i class="fa fa-home" aria-hidden="true"></i
 					></span>
 				</div>
@@ -179,13 +177,13 @@
 		<div style="text-align:center !important;">
 			<button
 				type="submit"
-				style="background-color: #F9D276; font-family: 'Fredoka One', cursive; color: #63032e; border-style: none; border-radius:1rem; width: 30%; margin: 1rem 0"
+				style="background-color: #F9D276; font-family: 'Fredoka One', cursive; color: #63032e; border-style: none; border-radius:1rem; width: 30%; margin: 1rem 0;"
 				class="btn btn-warning text-centre"
 			>
 				Sign Up!
 			</button>
 		</div>
-		<p class="text-center">Already Registered? <a href="#">Sign-in!</a></p>
+		<p class="text-center" style="font-family: 'Domine', serif;;">Already Registered? <a href="#" style="font-family: 'Fredoka One', cursive; color:#63032e; text-decoration: none;">Sign-in!</a></p>
 	</form>
 </div>
 
