--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,71 +3,57 @@
 <!-- login section begins -->
 <div class="media" style="position: relative; margin-bottom: 4rem;">
 	<img
-		class="login-bk-img align-left"
-		id="login-bk-img"
-		src="images/Login-Bkgd.png"
-		alt="color and shape background"
+		src="images/SignUp-Bkgd.png"
+		class="img-responsive login-bg-img"
+		alt="..."
+		style="z-index: -1 !important;"
 	/>
-	<div class="align-self-center mr-3">
+	<div>
 		<img
 			src="/images/helpingHands.png"
 			width="100"
 			height="100"
-			class="logo-img login-logo"
+			class="logo-img reg-logo"
 			alt="logo-assistU"
 		/>
-		<h1 class="">AssistU</h1>
-    <!-- <br /> -->
-    <div class="align-self-center ml-2">
-      <h2 class="media-body" style="align-content:text-center !important">Maximize Your Time</h2>
-    </div>
+		<h1 class="reg-quote1">AssistU</h1>
+		<h2 class="reg-quote2">Maximize Your Time</h2>
 	</div>
 </div>
 
-<br />
-<br />
-
-<div class="container login-sec text-center">
-	<div class="row">
-		<div class="container login-box text-left">
-			<br />
-			<h3>Login your account</h3>
-			<form>
-				<div class="form-group ">
-					<label class="label-for-login">Email</label>
-					<div class="input-group mb-2">
-						<div class="input-group-prepend">
-							<span class="input-group-text icon-container"
-								><i class="fa fa-envelope" aria-hidden="true"></i
-							></span>
-						</div>
-						<input
-							type="email"
-							class="form-control reg-form"
-							name="clientEmail"
-							placeholder="Your Email"
-							aria-describedby="emailInput"
-						/>
-					</div>
-				</div>
-				<div class="form-group">
-
-          <label class="label-for-login">Password</label>
-          <div class="input-group mb-2">
-            <div class="input-group-prepend">
-              <span class="input-group-text icon-container"
-                ><i class="fa fa-key" aria-hidden="true"></i
-              ></span>
-            </div>
-            <input
-              type="password"
-              class="form-control reg-form"
-              name="clientPassword"
-              name="clientPassword"
-              placeholder="Your Password"
-              aria-describedby="passwordInput"
-            />
-				</div>
+<div class="container border border-dark shadow register-box text-left">
+	<h2 style="text-align: center !important;">Login your account</h2>
+	<form action="/clientReg" method="post">
+		<label class="label-for-register">Email</label>
+		<div class="input-group mb-2">
+			<div class="input-group-prepend">
+				<span class="input-group-text icon-container" id="emailIconHelper"
+					><i class="fa fa-envelope" aria-hidden="true"></i
+				></span>
+			</div>
+			<input
+				type="email"
+				class="form-control reg-form"
+				name="clientEmail"
+				placeholder="Your Email"
+				aria-describedby="passwordInput"
+			/>
+		</div>
+		<label class="label-for-register">Password</label>
+		<div class="input-group mb-2">
+			<div class="input-group-prepend">
+				<span class="input-group-text icon-container" id="passwordIconHelper"
+					><i class="fa fa-key" aria-hidden="true"></i
+				></span>
+			</div>
+			<input
+				type="password"
+				class="form-control reg-form"
+				name="clientPassword"
+				placeholder="Your Password"
+				aria-describedby="passwordInput"
+			/>
+		</div>
 				<div class="row-btn text-center">
 
           <a class="btn btn-lg btn-outline-warning" href="https://assist-u.herokuapp.com/register" style="border: 1.5px #F9D276 solid; font-family: 'Fredoka One', cursive; color: #63032e; text-decoration: none; border-radius: 1rem;"
@@ -81,14 +67,13 @@
 					</button>
 					<p>
 						<a href="mailto:assistupro@gmail.com" style="font-family: 'Fredoka One', cursive; color: #63032e;"
-							>Forget Password</a
+							>Forget Password?</a
 						>
 					</p>
 				</div>
 			</form>
 		</div>
-	</div>
-</div>
+
 <br />
 
 <!-- login section ends -->
