--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,7 +5,7 @@
 		src="images/header-background.png"
 		alt="header-img"
 	/>
-	<a class="logo-img-link" href="https://assist-u.herokuapp.com/">
+	<a class="logo-img-link" href="/">
 		<img
 			src="/images/helpingHands.png"
 			width="50"
@@ -15,7 +15,7 @@
 		/>
 		<span class="brand-name">AssistU</span>
 	</a>
-	<a href="#">
+	<a href="/login">
 		<h6 class="sign-in-up">Sign In or Sign Up</h6>
 	</a>
 </nav>
