--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/header") -%>
 <%- include("partials/navbar") -%>
 <div class="thanks-center">
-    <h2 class="display-4">success!</h2>
-    
-  </div>
+    <h2 class="display-4">Login Success!</h2>
+    <p>Development in progress! Stay tuned for updates.</p>
+</div>
 <%- include("partials/footer") -%>
