--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -59,6 +59,19 @@ textarea{
 	width: 100%;
 	height: 330%;
 }
+.hidden-btn{
+		-webkit-border-radius: 28;
+		-moz-border-radius: 28;
+		color: #000000;
+		background: #fff;
+		padding: 10px 20px 10px 20px;
+		text-decoration: none
+	}
+.hidden-btn:hover {
+		background: #ffff;
+		text-decoration: none;
+	}
+
 
 /*! Services Section */
 
